sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:4: error: not found: value swapped
  while(swapped)
        ^AlgBubbleSort1:16: error: method traverse has return statement; needs result type
   return swapped;
   ^AlgBubbleSort1:5: error: type mismatch;
 found   : Unit
 required: Boolean
    modif = traverse();
                    ^