sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var modif = true;
  while(swapped)
  	modif = traverse();
}


def traverse() = {
   var swapped = false;
   for (i <- 0 to getValueCount() - 1){
     if(isSmaller(i, i+1)){
   		 swap(i,i+1);
       swapped = true;
	   }
   return swapped;
   }
}